--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -20,6 +20,8 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,9 +68,6 @@
     </Reference>
     <Reference Include="Bitrium.Http.Extensions">
       <HintPath>..\packages\Bitrium.Http.Extensions.1.1.0\lib\portable-net45+sl50\Bitrium.Http.Extensions.dll</HintPath>
-    </Reference>
-    <Reference Include="CsSandboxApi">
-      <HintPath>..\External\CsSandbox\CsSandboxApi.dll</HintPath>
     </Reference>
     <Reference Include="Elmah, Version=1.2.14318.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -273,7 +272,6 @@
     <Compile Include="ExecutionService\CsSandboxExecutionService.Settings.Sample.cs" />
     <Compile Include="ExecutionService\RedundantExecutionService.cs" />
     <Compile Include="ExecutionService\IdeoneExecutionService.cs" />
-    <Compile Include="ExecutionService\StringExtention.cs" />
     <Compile Include="Ideone\IdeoneClient.*Settings.cs" />
     <Compile Include="LTI\LtiAuthenticationExtensions.cs" />
     <Compile Include="LTI\SecurityHandler.cs" />
@@ -302,8 +300,6 @@
       <DependentUpon>201508110641479_AddStatus.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\BlockRenderContext.cs" />
-    <Compile Include="Models\RunningResults.cs" />
-    <Compile Include="Models\InternalSubmissionModel.cs" />
     <Compile Include="Models\LtiSlideRequest.cs" />
     <Compile Include="Models\CodeModel.cs" />
     <Compile Include="Models\LtiConsumer.cs" />
@@ -1143,12 +1139,11 @@
     <Content Include="Views\Course\AcceptedAlert.cshtml" />
     <Content Include="Views\Course\LtiSlide.cshtml" />
     <Content Include="Views\Sandbox\Index.cshtml" />
-    <Content Include="Views\Sandbox\SubmissionsList.cshtml" />
     <Content Include="Views\Sandbox\GetDetails.cshtml" />
-    <Content Include="Views\Sandbox\Submissions.cshtml" />
+    <Content Include="Views\Sandbox\RunCode.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\jobs\continuous\Job\" />
     <Folder Include="Courses\" />
     <Folder Include="tablesorter-master\docs\" />
   </ItemGroup>
@@ -1165,6 +1160,10 @@
     <ProjectReference Include="..\courses\AIML\AIML.csproj">
       <Project>{fe23302c-0d46-4c8e-81be-c9b79f6e0263}</Project>
       <Name>AIML</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Job\Job.csproj">
+      <Project>{77b16f9d-3cdf-4cc6-be5f-b6badfac5394}</Project>
+      <Name>Job</Name>
     </ProjectReference>
     <ProjectReference Include="..\uLearn\uLearn.csproj">
       <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
@@ -1210,13 +1209,19 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>xcopy $(SolutionDir)\Job\bin\Debug $(SolutionDir)\uLearn.Web\App_Data\jobs\continuous\Job /h/e/y/k/f/c</PostBuildEvent>
   </PropertyGroup>
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
   <Target Name="EnsureBclBuildImported" BeforeTargets="BeforeBuild" Condition="'$(BclBuildImported)' == ''">
     <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
     <Error Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
+  </Target>
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
