Simplify RunCsJob interaction with Web. Add db index to fix sandbox Index View performance

--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<appSettings>
-		<add key="url" value="https://localhost:44300/" />
-		<add key="token" value="runner" />
+		<add key="submissionsUrl" value="https://localhost:44300/" />
+		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
 	</appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
