--- a/src/uLearnToEdx/Course.Tool.csproj
+++ b/src/uLearnToEdx/Course.Tool.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{38660028-BD75-4281-84E9-B35CE3E338DC}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>uLearnToEdx</RootNamespace>
-    <AssemblyName>uLearnToEdx</AssemblyName>
+    <RootNamespace>uLearn.CourseTool</RootNamespace>
+    <AssemblyName>course</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -46,10 +46,6 @@
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -68,7 +64,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Converter.cs" />
-    <Compile Include="Converter_should.cs" />
+    <Compile Include="Credentials.cs" />
     <Compile Include="DownloadManager.cs" />
     <Compile Include="Json\Video.cs" />
     <Compile Include="Json\VideoHistory.cs" />
