--- a/src/RunCsJob.Api/RunCsJob.Api.csproj
+++ b/src/RunCsJob.Api/RunCsJob.Api.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E48C481C-AA34-4413-AED3-4B685AFF3239}</ProjectGuid>
+    <ProjectGuid>{26580595-F4DC-41EE-BA66-0EF4692243AF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Presentation</RootNamespace>
-    <AssemblyName>Presentation</AssemblyName>
+    <RootNamespace>RunCsJob.Api</RootNamespace>
+    <AssemblyName>RunCsJob.Api</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,46 +40,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Slides\U99_Presentation\_Code.cs" />
-    <Compile Include="Slides\U99_Presentation\S001_Gallery.cs" />
-    <Compile Include="CourseTests.cs" />
-    <Compile Include="Slides\U99_Presentation\_FirstStep.cs" />
+    <Compile Include="RunnerModels.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Slides\Title.txt" />
-    <Content Include="Slides\Course.xml" />
-    <Content Include="Slides\U99_Presentation\HelloWorld.py" />
-    <Content Include="Slides\U99_Presentation\img\01-stack.png" />
-    <Content Include="Slides\U99_Presentation\img\02-IEnumerable.png" />
-    <Content Include="Slides\U99_Presentation\img\03-Структуры.png" />
-    <Content Include="Slides\U99_Presentation\img\markdown.png" />
-    <Content Include="Slides\U99_Presentation\S002_sample.quiz.xml" />
-    <Content Include="Slides\U99_Presentation\S003_code.lesson.xml" />
-    <Content Include="Slides\U99_Presentation\S004_example.lesson.xml" />
-    <Content Include="Slides\U99_Presentation\Title.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\CsSandboxer\CsSandboxer.csproj">
-      <Project>{c2f55118-2422-4043-96af-016ebb8ec965}</Project>
-      <Name>CsSandboxer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\uLearn.CourseLib\uLearn.CourseLib.csproj">
-      <Project>{70f83ad9-235d-4675-8585-608eb089ef94}</Project>
-      <Name>uLearn.CourseLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\uLearn\uLearn.csproj">
-      <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
-      <Name>uLearn</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>REM copy this post build step to new course
-del "$(OutDir)$(ProjectName).zip"
-"$(SolutionDir)..\tools\7z\7za.exe" a -mcu "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"
-copy "$(OutDir)$(ProjectName).zip" $(SolutionDir)uLearn.Web\Courses.Staging\</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
