--- a/src/courses/Linq/linq.csproj
+++ b/src/courses/Linq/linq.csproj
@@ -136,6 +136,10 @@
       <Project>{77b16f9d-3cdf-4cc6-be5f-b6badfac5394}</Project>
       <Name>RunCsJob</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\uLearn.CourseLib\uLearn.CourseLib.csproj">
+      <Project>{70f83ad9-235d-4675-8585-608eb089ef94}</Project>
+      <Name>uLearn.CourseLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\uLearn\uLearn.csproj">
       <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
       <Name>uLearn</Name>
