--- a/src/courses/ParProg/ParProg.csproj
+++ b/src/courses/ParProg/ParProg.csproj
@@ -66,6 +66,10 @@
     <Content Include="Slides\Title.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\uLearn.CourseLib\uLearn.CourseLib.csproj">
+      <Project>{70f83ad9-235d-4675-8585-608eb089ef94}</Project>
+      <Name>uLearn.CourseLib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\uLearn\uLearn.csproj">
       <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
       <Name>uLearn</Name>
