--- a/src/uLearn.CourseLib/uLearn.CourseLib.csproj
+++ b/src/uLearn.CourseLib/uLearn.CourseLib.csproj
@@ -4,13 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E48C481C-AA34-4413-AED3-4B685AFF3239}</ProjectGuid>
+    <ProjectGuid>{70F83AD9-235D-4675-8585-608EB089EF94}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Presentation</RootNamespace>
-    <AssemblyName>Presentation</AssemblyName>
+    <RootNamespace>uLearn</RootNamespace>
+    <AssemblyName>uLearn.CourseLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,47 +44,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseCourseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Slides\U99_Presentation\_Code.cs" />
-    <Compile Include="Slides\U99_Presentation\S001_Gallery.cs" />
-    <Compile Include="CourseTests.cs" />
-    <Compile Include="Slides\U99_Presentation\_FirstStep.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Slides\Title.txt" />
-    <Content Include="Slides\Course.xml" />
-    <Content Include="Slides\U99_Presentation\HelloWorld.py" />
-    <Content Include="Slides\U99_Presentation\img\01-stack.png" />
-    <Content Include="Slides\U99_Presentation\img\02-IEnumerable.png" />
-    <Content Include="Slides\U99_Presentation\img\03-Структуры.png" />
-    <Content Include="Slides\U99_Presentation\img\markdown.png" />
-    <Content Include="Slides\U99_Presentation\S002_sample.quiz.xml" />
-    <Content Include="Slides\U99_Presentation\S003_code.lesson.xml" />
-    <Content Include="Slides\U99_Presentation\S004_example.lesson.xml" />
-    <Content Include="Slides\U99_Presentation\Title.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\CsSandboxer\CsSandboxer.csproj">
-      <Project>{c2f55118-2422-4043-96af-016ebb8ec965}</Project>
-      <Name>CsSandboxer</Name>
+    <ProjectReference Include="..\RunCsJob.Api\RunCsJob.Api.csproj">
+      <Project>{26580595-f4dc-41ee-ba66-0ef4692243af}</Project>
+      <Name>RunCsJob.Api</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\uLearn.CourseLib\uLearn.CourseLib.csproj">
-      <Project>{70f83ad9-235d-4675-8585-608eb089ef94}</Project>
-      <Name>uLearn.CourseLib</Name>
+    <ProjectReference Include="..\RunCsJob\RunCsJob.csproj">
+      <Project>{77b16f9d-3cdf-4cc6-be5f-b6badfac5394}</Project>
+      <Name>RunCsJob</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\uLearn\uLearn.csproj">
+    <ProjectReference Include="..\uLearn\uLearn.csproj">
       <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
       <Name>uLearn</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>REM copy this post build step to new course
-del "$(OutDir)$(ProjectName).zip"
-"$(SolutionDir)..\tools\7z\7za.exe" a -mcu "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"
-copy "$(OutDir)$(ProjectName).zip" $(SolutionDir)uLearn.Web\Courses.Staging\</PostBuildEvent>
-  </PropertyGroup>
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
