--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -160,9 +160,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\uLearnToEdx\Course.Tool.csproj">
+    <ProjectReference Include="..\CourseTool\uLearn.CourseTool.csproj">
       <Project>{38660028-bd75-4281-84e9-b35ce3e338dc}</Project>
-      <Name>Course.Tool</Name>
+      <Name>uLearn.CourseTool</Name>
     </ProjectReference>
     <ProjectReference Include="..\uLearn\uLearn.csproj">
       <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
