--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1151,6 +1151,10 @@
       <Project>{c2f55118-2422-4043-96af-016ebb8ec965}</Project>
       <Name>CsSandboxer</Name>
     </ProjectReference>
+    <ProjectReference Include="..\RunCsJob.Api\RunCsJob.Api.csproj">
+      <Project>{26580595-F4DC-41EE-BA66-0EF4692243AF}</Project>
+      <Name>RunCsJob.Api</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RunCsJob\RunCsJob.csproj">
       <Project>{77b16f9d-3cdf-4cc6-be5f-b6badfac5394}</Project>
       <Name>RunCsJob</Name>
