--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -15,4 +15,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net45" />
+	<package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
+	<package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+	<package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
 </packages>
