--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -33,7 +33,8 @@
 	<package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
 	<package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
 	<package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
-	<package id="Microsoft.Owin.Host.SystemWeb" version="2.0.0" targetFramework="net45" />
+	<package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
+	<package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
 	<package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 	<package id="Modernizr" version="2.6.2" targetFramework="net45" />
 	<package id="Microsoft.Web.WebJobs.Publish" version="1.0.2" targetFramework="net45" />
