--- a/src/CourseTool/uLearn.CourseTool.csproj
+++ b/src/CourseTool/uLearn.CourseTool.csproj
@@ -58,19 +58,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractOptions.cs" />
     <Compile Include="ArchiveManager.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="ConvertOptions.cs" />
     <Compile Include="CookieAwareWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Converter.cs" />
     <Compile Include="Credentials.cs" />
+    <Compile Include="SampleCustomPatchOptions.cs" />
     <Compile Include="DownloadManager.cs" />
     <Compile Include="Json\Video.cs" />
     <Compile Include="Json\VideoHistory.cs" />
-    <Compile Include="Options.cs" />
+    <Compile Include="PatchOptions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ULearnPatchOptions.cs" />
+    <Compile Include="VideoPatchOptions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
