--- a/src/CourseTool/uLearn.CourseTool.csproj
+++ b/src/CourseTool/uLearn.CourseTool.csproj
@@ -125,6 +125,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="renderer\favicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="renderer\scripts\active-line.js">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
