--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -280,6 +280,10 @@
     <Compile Include="Migrations\201508141111366_UserSolution_TimestampIndex.Designer.cs">
       <DependentUpon>201508141111366_UserSolution_TimestampIndex.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509021133351_AddInfoAboutStudent.cs" />
+    <Compile Include="Migrations\201509021133351_AddInfoAboutStudent.Designer.cs">
+      <DependentUpon>201509021133351_AddInfoAboutStudent.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\BlockRenderContext.cs" />
     <Compile Include="Models\LtiSlideRequest.cs" />
     <Compile Include="Models\CodeModel.cs" />
@@ -543,6 +547,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508141111366_UserSolution_TimestampIndex.resx">
       <DependentUpon>201508141111366_UserSolution_TimestampIndex.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509021133351_AddInfoAboutStudent.resx">
+      <DependentUpon>201509021133351_AddInfoAboutStudent.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -1099,6 +1106,7 @@
     <Content Include="Views\Sandbox\Index.cshtml" />
     <Content Include="Views\Sandbox\GetDetails.cshtml" />
     <Content Include="Views\Sandbox\RunCode.cshtml" />
+    <Content Include="Views\Account\StudentInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
