--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -251,6 +251,7 @@
     <Compile Include="DataContexts\TextsRepo.cs" />
     <Compile Include="DataContexts\UnitsRepo.cs" />
     <Compile Include="LTI\LtiAuthenticationExtensions.cs" />
+    <Compile Include="LTI\LtiUtils.cs" />
     <Compile Include="LTI\SecurityHandler.cs" />
     <Compile Include="Migrations\201503231319119_ExecutionServiceName.cs" />
     <Compile Include="Migrations\201503231319119_ExecutionServiceName.Designer.cs">
@@ -281,6 +282,7 @@
       <DependentUpon>201508141111366_UserSolution_TimestampIndex.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\BlockRenderContext.cs" />
+    <Compile Include="Models\LtiQuizModel.cs" />
     <Compile Include="Models\LtiSlideRequest.cs" />
     <Compile Include="Models\CodeModel.cs" />
     <Compile Include="Models\LtiConsumer.cs" />
@@ -1095,10 +1097,12 @@
       <LastGenOutput>AcceptedSolutionsHtml.generated.cs</LastGenOutput>
     </Content>
     <Content Include="Views\Course\AcceptedAlert.cshtml" />
-    <Content Include="Views\Course\LtiSlide.cshtml" />
+    <Content Include="Views\Course\LtiExerciseSlide.cshtml" />
     <Content Include="Views\Sandbox\Index.cshtml" />
     <Content Include="Views\Sandbox\GetDetails.cshtml" />
     <Content Include="Views\Sandbox\RunCode.cshtml" />
+    <Content Include="Views\Course\LtiQuizSlide.cshtml" />
+    <Content Include="Views\Course\LtiSlide.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
